tests/baselines/reference/multipleExportDefault5.errors.txt
tests/cases/conformance/externalModules/multipleExportDefault5.ts(1,25): error TS2300: Duplicate identifier 'default'.
tests/cases/conformance/externalModules/multipleExportDefault5.ts(1,25): error TS2323: Cannot redeclare exported variable 'default'.
tests/cases/conformance/externalModules/multipleExportDefault5.ts(2,22): error TS2300: Duplicate identifier 'default'.
tests/cases/conformance/externalModules/multipleExportDefault5.ts(2,22): error TS2323: Cannot redeclare exported variable 'default'.


==== tests/cases/conformance/externalModules/multipleExportDefault5.ts (4 errors) ====
    export default function bar() { }
                            ~~~
!!! error TS2300: Duplicate identifier 'default'.
!!! related TS6203 tests/cases/conformance/externalModules/multipleExportDefault5.ts:2:22: 'default' was also declared here.
                            ~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
    export default class C {}
                         ~
!!! error TS2300: Duplicate identifier 'default'.
!!! related TS6203 tests/cases/conformance/externalModules/multipleExportDefault5.ts:1:25: 'default' was also declared here.
                         ~
!!! error TS2323: Cannot redeclare exported variable 'default'.